# learn-pygame

./: .gitignore  README.md  pyproject.toml
src/game/: coin.py  colors.py  constants.py  main.py  player.py
